Fixed #133, Added ms-overflow-style to eliminate overlapse

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -8,7 +8,11 @@
 #filterContent {
     display: none;
 }
-html{height:100%;}
+@-ms-viewport{ width: auto !important; }
+html{
+    height:100%;
+    -ms-overflow-style: scrollbar;
+}
 body{
     background:url(../img/dark/bg.png) repeat 0 0 #DDE7F2;
     font-family:"Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
